Fixed clipping the comic title [#783]
Also switched the subtitle to be the comic title.

--- a/comixed-web/src/app/comic-book/components/comic-detail-card/comic-detail-card.component.scss
+++ b/comixed-web/src/app/comic-book/components/comic-detail-card/comic-detail-card.component.scss
@@ -5,6 +5,12 @@
   display: inline-block;
 }
 
+.mat-card-title {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .mat-expansion-panel,
 .mat-expanded {
   background-color: var(--primary-lighter-color);
